objects/SFDC_Resource__c.object
<CustomObject>
    <description>The human internal Resource, or external partner, available to work on a Project.</description>
    <label>Resource</label>
    <nameField>
        <label>Resource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implementor</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identified contact at the account which could perform work on behalf of PerkinElmer</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Rate__c</fullName>
        <description>Rate at which PKI gets charged</description>
        <inlineHelpText>Rate at which PKI gets charged</inlineHelpText>
        <label>Daily Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>API_Artists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Artists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java_Coders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java Coders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Rate__c</fullName>
        <label>Travel Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capabilities__c</fullName>
        <label>Capabilities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Loaders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Loaders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_resources__c</fullName>
        <label>Ability to deliver on time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Junkies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Junkies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Rate_USD__c</fullName>
        <label>Daily Rate (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Skills__c</fullName>
        <label>Training Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Rate_USD__c</fullName>
        <label>Travel Rate (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Citrix_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citrix Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreign_Languages__c</fullName>
        <label>Foreign Languages</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMP_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PMP Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Skills__c</fullName>
        <label>Integration Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Skill_Level__c</fullName>
        <label>Overall Skill Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>UNRATED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Process_Savvy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Process Savvy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Project_Skills__c</fullName>
        <label>Large Project Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oracle_DBA_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oracle DBA Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Objects_Skills__c</fullName>
        <label>Custom Objects Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Migration_Skills__c</fullName>
        <label>Data Migration Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Billing_Rate__c</fullName>
        <label>Standard Billing Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Process_Savvy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Process Savvy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Topics_Skills__c</fullName>
        <label>Support Topics Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Topic_Skills__c</fullName>
        <label>Marketing Topic Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sForce_Controls_Skills__c</fullName>
        <label>sForce Controls Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Process_savvy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Process Savvy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_of_Staff_Available__c</fullName>
        <label>Size of Staff Available</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Engagement_Skills__c</fullName>
        <label>Client Engagement Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excel_Calculations_Gurus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excel LABWORKS Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Server_DBA_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SQL Server DBA Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Authorization__c</fullName>
        <label>Date of Last Authorization</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ability_to_deliver_on_budget__c</fullName>
        <label>Ability to deliver on budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>